Up bài cơ bản, chưa có style

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
+    <style link="styles.css">
+     </style>
 </head>
 <body>
-    Hello
-    <a href="tkb.html" target="_blank"> Tkb nè</a>
-    
+
+    <header>
+         Trang chủ , sẽ còn nhiều thay đổi trong thời gian tới 
+    </header>
+
+    <h1> bài tập   CT188 </h1>
+    <a href="tkb.html"> Thời khóa biểu </a> <br>
+
+
+    <a href=" tho.html"> Câu nói trong bộ phim yêu thích   </a> 
+    <footer>
+        <p>Web của Trường Giang - nNero</p>
+
+    </footer>
 </body>
 </html>
