Chỉnh style cho các trang

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trang chủ</title>
-    <style link="styles.css">
-     </style>
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header-flex">Trang chủ</header>
+      <main class="main-flex">
+        <h1>bài tập CT188</h1>
+        <a href="tkb.html"> Thời khóa biểu </a> <br />
 
-    <header>
-         Trang chủ , sẽ còn nhiều thay đổi trong thời gian tới 
-    </header>
-
-    <h1> bài tập   CT188 </h1>
-    <a href="tkb.html"> Thời khóa biểu </a> <br>
-
-
-    <a href=" tho.html"> Câu nói trong bộ phim yêu thích   </a> 
-    <footer>
-        <p>Web của Trường Giang - nNero</p>
-
-    </footer>
-</body>
+        <a href=" tho.html"> Câu nói trong bộ phim yêu thích </a>
+      </main>
+      <footer class="footer-flex">
+        <p>Web của Trường Giang - B2308353</p>
+      </footer>
+    </div>
+  </body>
 </html>
