--- a/tho.html
+++ b/tho.html
@@ -3,35 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            background-color: 	#f6eee3;
-            font-size: larger;
-}
-    article{ 
-        text-align: right;
-        width:170px;
-    }
+    <link rel="stylesheet" href="styles.css">
 
-    .row{
-        display: flex;
-        gap:18px;
-
-        justify-content: center;
-    }
-
-    .col{
-        flex-grow: 0;
-        flex-shrink: 0;
-        
-    }
-     </style>
 </head>
-<body>
+<body style="background-color: antiquewhite;">
     <main class=" row">
         
 
-        <article class = "col">
+        <article id ="khungchu" class = "col">
             &emsp;&emsp;"There's no such thing as a painless lesson, they just don't exist. Sacrifices are necessary. You can't gain anything without losing something first. Although...if you can endure that pain and walk from it, you'll find that you now have a heart strong enough to overcome any obstacle. Yeah... a heart made of <strong> Fullmetal. </strong>"
             <h4>
                 &emsp;- Edward Elric , <em>"Fullmetal Alchemist" </em>
