--- a/tkb.html
+++ b/tkb.html
@@ -4,27 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thời Khóa Biểu</title>
-    <style>
-      table,
-      tr,
-      th,
-      td {
-        border: 1px solid black;
-        text-align: center;
-        
-      }
-      td {
-        padding: 4px;
-      }
-      .cotiet{
-        background-color:#FDFD96 ;
-      }
-      
-    </style>
+    <link rel="stylesheet" href="styles.css">
+
   </head>
 
   <body>
-    <table>
+    <div class="wrapper">
+      <header class="header-flex"><a href="index.html"  >Trang chủ</a></header>
+    <table class="table-flex">
       <tr>
         <th>Thứ 2</th>
         <th>Thứ 3</th>
@@ -146,5 +133,9 @@
         <td>&nbsp;</td>
       </tr>
     </table>
+    <footer class="footer-flex">
+      <p>Web của Trường Giang - B2308353</p>
+    </footer>
+  </div>
   </body>
 </html>
