--- a/tho.html
+++ b/tho.html
@@ -7,6 +7,7 @@
 
 </head>
 <body style="background-color: antiquewhite;">
+    <header class="header-flex"><a href="index.html"  >Trang chủ</a></header>
     <main class=" row">
         
 
@@ -20,5 +21,8 @@
         
         <img class="col" src="https://i.pinimg.com/originals/87/1f/6f/871f6fd73149872282f2ce2d6c9ecae6.gif">
     </main>
+    <footer class="footer-flex">
+        <p>Web của Trường Giang - B2308353</p>
+      </footer>
 </body>
 </html>
