2 bài toán cơ bản

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
       <header class="header-flex">Trang chủ</header>
       <main class="main-flex">
         <h1>bài tập CT188</h1>
-        <a href="tkb.html"> Thời khóa biểu </a> <br />
+        <a href="tkb.html"> Thời khóa biểu </a>
 
         <a href=" tho.html"> Câu nói trong bộ phim yêu thích </a>
+
+        <a href=" tamgiac.html"> Tính tam giác cơ bản </a>
+
+        <a href="pheptoan.html"> Giai thừa và Luỹ thừa </a>
+
       </main>
       <footer class="footer-flex">
         <p>Web của Trường Giang - B2308353</p>
